--- a/2-Trillo/sass/_layout.scss
+++ b/2-Trillo/sass/_layout.scss
@@ -49,6 +49,7 @@
 /// PAGE DETAILS
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
@@ -56,7 +57,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   background-color: var(--color-white);
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -66,4 +66,7 @@
 
 .user-reviews {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
