--- a/2-Trillo/sass/_base.scss
+++ b/2-Trillo/sass/_base.scss
@@ -21,6 +21,14 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+// Breakpoint variables
+
+$bp-largest: 75em; // 1200 / 16 = 75 
+$bp-large: 68.75em;
+$bp-medium: 56.25em;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
+
 // Basic reset
 
 * {
@@ -39,6 +47,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1 rem = 10px, 10px/16px = 62.5%
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
