--- a/3-Nexter/sass/_base.scss
+++ b/3-Nexter/sass/_base.scss
@@ -23,6 +23,7 @@ $font-display: 'Josefin Sans', sans-serif;
   box-sizing: inherit;
 }
 
+// BASE
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem => 10px   10px/16px(default) = 62.5%;
@@ -40,9 +41,4 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-
-  & > * {
-    font-size: 2rem;
-    padding: 1rem;
-  }
 }
